[project]
name = "kgvidplot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lesguillemets", email = "kgkacko+github@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "polars>=1.38.0",
    "pyqtgraph>=0.14.0",
    "pyside6>=6.10.2",
]

[project.scripts]
kgvidplot = "kgvidplot:main"

[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.0",
]
